Regression: Copying text selected with double-click in the Python Console instead copies the text after the selection #108403

Closed
opened 2023-05-30 00:48:26 +02:00 by Thomas Barlow · 2 comments
Member

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.41

Blender Version
Broken: version: 3.6.0 Beta, 4.0
Worked: 3.5.1

Caused by 1ad4f67d78

Short description of error
Copying text in the Python Console that was selected by double-clicking left-mouse does not copy the selected text, it instead copies the rest of the line, starting from the end of the selected text.

(copying text selected by clicking and dragging left-mouse works as expected)

Exact steps for others to reproduce the error

  1. Open the Python Console
  2. Double-click on mathutils to select the entire word image
  3. Copy the text with Ctrl+c or Console>Copy
  4. Paste the copied text (either into Blender or elsewhere) image
  5. Observe that the pasted text is actually import *; from math import *, which is the rest of the line after mathutils.
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.41 **Blender Version** Broken: version: 3.6.0 Beta, 4.0 Worked: 3.5.1 Caused by 1ad4f67d78022cacedafb88cb0ae4ab1bfe3f667 **Short description of error** Copying text in the Python Console that was selected by double-clicking left-mouse does not copy the selected text, it instead copies the rest of the line, starting from the end of the selected text. (copying text selected by clicking and dragging left-mouse works as expected) **Exact steps for others to reproduce the error** 1. Open the Python Console 1. Double-click on `mathutils` to select the entire word ![image](/attachments/1349365f-0667-4124-bcbe-c9b58f2f8f1b) 1. Copy the text with `Ctrl+c` or `Console`>`Copy` 1. Paste the copied text (either into Blender or elsewhere) ![image](/attachments/84c6153b-cec0-4808-99e2-69fedfa5788a) 1. Observe that the pasted text is actually ` import *; from math import *`, which is the rest of the line after `mathutils`.
Thomas Barlow added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-05-30 00:48:27 +02:00
Member

Thanks for the report. Can confirm the regression.

Thanks for the report. Can confirm the regression.
Pratik Borhade changed title from Copying text selected with double-click in the Python Console instead copies the text after the selection to Regression: Copying text selected with double-click in the Python Console instead copies the text after the selection 2023-05-30 06:42:36 +02:00
Member

Caused by 1ad4f67d78
@Harley ^

Caused by 1ad4f67d78022cacedafb88cb0ae4ab1bfe3f667 @Harley ^
Harley Acheson self-assigned this 2023-05-30 16:54:27 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-30 19:51:46 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108403
No description provided.